--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.5",
     "axios": "^1.4.0",
+    "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "pug": "^3.0.2"
   }
