--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "nodemon app.js"
+    "watch:sass": "node-sass sass/main.scss public/css/style.css -w",
+    "start": "nodemon app.js",
+    "build": "esbuild app.js --bundle --platform=node --packages=external --format=esm --outfile=build/app.js"
   },
   "dependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.2.5",
     "axios": "^1.4.0",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "node-sass": "^9.0.0"
   }
 }
