--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "watch:sass": "node-sass sass/main.scss public/css/style.css -w",
-    "start": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "start":"node app.js"
   },
   "dependencies": {
     "axios": "^1.4.0",
